getting rid of List.of and Map.of