@@ -7,6 +7,7 @@ import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import java.math.BigInteger;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -94,7 +95,7 @@ public class SplitMintReason implements MintTransactionReason {
     }
 
     Map<CoinId, BigInteger> coins = transaction.getData().getCoinData().map(TokenCoinData::getCoins)
-        .orElse(Map.of());
+        .orElse(Collections.emptyMap());
     if (coins.size() != this.proofs.size()) {
       return VerificationResult.fail("Total amount of coins differ in token and proofs.");
     }
